--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <script src="static/lib/require.js"></script>
     <script type="text/javascript" src="static/lib/jquery.js"></script>
-    <script type="text/javascript" src="static/js/bug.js"></script>
-    <script type="text/javascript" src="static/js/addcontent.js"></script>
+    <!--<script type="text/javascript" src="static/js/bug.js"></script>-->
+    <!--<script type="text/javascript" src="static/js/addcontent.js"></script>-->
     <link rel="stylesheet" type="text/css" href="static/css/bug.css"/>
     <title>巴哥模板工具</title>
 </head>
-<body onload="loading()">
+<body>
 <header>
     <h3 style="text-align: center;color: blue;letter-spacing: 8px;">bug编辑工具</h1>
         <hr/>
@@ -103,8 +104,16 @@
     </div>
 </main>
 <footer>
-
     <p>Produce by :someone; Version:1.0;特别鸣谢：小夫</p>
 </footer>
+<script>
+    requirejs.config({
+        baseUrl: "static/js"
+    });
+
+    require(["require", "test"], function(require) {
+        var test = require("test");
+    });
+</script>
 </body>
 </html>
