--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <script type="text/javascript" src="static/lib/jquery.js"></script>
     <!--<script type="text/javascript" src="static/js/bug.js"></script>-->
     <!--<script type="text/javascript" src="static/js/addcontent.js"></script>-->
+    <link rel="stylesheet" href="./static/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="static/css/bug.css"/>
     <title>巴哥模板工具</title>
 </head>
 <body>
 <header>
-    <h3 style="text-align: center;color: blue;letter-spacing: 8px;">bug编辑工具</h1>
+    <h3 style="text-align: center;color: blue;letter-spacing: 8px;">bug编辑工具</h3>
         <hr/>
 </header>
 <main id="index">
