grunt 配置以及后台的http处理逻辑

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <script type="text/javascript" src="static/lib/jquery.js"></script>
     <!--<script type="text/javascript" src="static/js/bug.js"></script>-->
     <!--<script type="text/javascript" src="static/js/addcontent.js"></script>-->
-    <link rel="stylesheet" href="./static/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="static/css/index.css"/>
+    <link rel="stylesheet" href="./static/css/all.css">
     <title>巴哥模板工具</title>
 </head>
 <body>
@@ -114,8 +113,8 @@
         }
     });
 
-    require(["require", "jquery", "bug-beta"], function(require, $) {
-        var bugBeta = require("bug-beta");
+    require(["require", "jquery", "bugBeta"], function(require, $) {
+        var bugBeta = require("bugBeta");
 //        bugBeta.addAll();
     });
 </script>
