--- a/index.html
+++ b/index.html
@@ -74,32 +74,32 @@
             </form>
             <textarea id="b_envinfo" placeholder="请选择环境信息..." readonly="readonly"></textarea>
         </div>
-        <div id="links">
-            <a id="bug_connect" href="http://www.finedevelop.com/pages/viewpage.action?pageId=13664904" target="_blank">交互界面整理</a>
-            <a id="interact_connect" href="http://ui.finebi.com:7777/UI/" target="_blank">交互文档入口</a>
-            <a id="buglists_connect" href="http://www.finedevelop.com/pages/viewpage.action?pageId=15305429"
-               target="_blank">Neo's buglists</a>
-            <a id="jar_connect" href="ftp://env.finedevelop.com/finebi" target="_blank">fineBI jar包</a>
-        </div>
     </aside>
 
     <aside id="index_right">
         <form action="" method="get">
-            <span>常用内容：</span>
-            <button type="button" id="addtitle">添加常用标题</button>
-            <button type="button" id="addphen">添加常用现象</button>
-            <button type="button" id="addexpt">添加常用期望</button>
-            <div id="bug_example">研发中</div>
+            <span>bug要求</span>
+            <div id="bug_example"></div>
 
             <textarea id="bug_result_title" placeholder="Here will print the bug title!" readonly="readonly"></textarea>
             <textarea id="bug_result_describle" placeholder="Here will print the bug describle!"
                       readonly="readonly"></textarea>
         </form>
         <div id="control">
-            <button type="button">复制主题</button>
-            <button type="button">复制描述</button>
+            <button type="button" id="copy_theme">复制主题</button>
+            <button type="button" id="copy_describe">复制描述</button>
             <button type="button" id="createbug">创建BUG</button>
         </div>
+    </aside>
+    <aside id="index_bottom">
+        <div id="common_links">
+            <a id="bug_connect" href="http://www.finedevelop.com/pages/viewpage.action?pageId=13664904" target="_blank">交互界面整理</a>
+            <a id="interact_connect" href="http://ui.finebi.com:7777/UI/" target="_blank">交互文档入口</a>
+            <a id="buglists_connect" href="http://www.finedevelop.com/pages/viewpage.action?pageId=15305429"
+               target="_blank">Neo's buglists</a>
+            <a id="jar_connect" href="ftp://env.finedevelop.com/finebi" target="_blank">fineBI jar包</a>
+        </div>
+        <div id="bug_list"></div>
     </aside>
 </section>
 <footer>
