--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="static/lib/require.js"></script>
     <script type="text/javascript" src="static/lib/jquery.js"></script>
     <script src="static/lib/Cookies.js"></script>
+    <script src="static/lib/localStorage.js"></script>
     <!--<script type="text/javascript" src="static/js/bug.js"></script>-->
     <!--<script type="text/javascript" src="static/js/addcontent.js"></script>-->
     <link rel="stylesheet" href="./static/css/index.css">
