稍微修改下

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <option value="refactor">refactor</option>
                     <option value="fineio">fineio</option>
                 </select>
-                <input id="choose_time" type="text" name="jar" value=""/>
+                <input id="choose_time" type="text" name="jar" placeholder="2017-12-09" value=""/>
                 <br/>
                 <label>交互文档：</label>
                 <input type="text" id="interactive" name="interact" value=""/>
@@ -101,7 +101,7 @@
     </aside>
 </section>
 <footer>
-    <p>Produce by :Neo.Zhu; Version:1.0;特别鸣谢：xiaofu.qin</p>
+    <p>Version:1.0;Produce by :Neo.Zhu;鸣谢：xiaofu.qin</p>
 </footer>
 <script>
     requirejs.config({
