--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-    <h3 style=";">bug编辑页面</h3>
+    <h3 style=";">bug编辑规范</h3>
     <button type="button" id="clear_all">一键重置</button>
     <hr/>
 </header>
